update: change file path

--- a/result.html
+++ b/result.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/navBar&Footer.css">
-    <link rel="stylesheet" href="../styles/result.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/navBar&Footer.css">
+    <link rel="stylesheet" href="./styles/result.css">
 
     <title>Results</title>
 </head>
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <img src="../assets/elements/examoLogo.svg" alt="logo" id="logo">
+        <img src="./assets/elements/examoLogo.svg" alt="logo" id="logo">
     </nav>
 
     <div class="page">
@@ -38,6 +38,6 @@
 
 </body>
 
-<script src="../scripts/result/result.js"></script>
+<script src="./scripts/result/result.js"></script>
 
 </html>
