--- a/signIn.html
+++ b/signIn.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/signIn.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/signIn.css">
 
     <title>Sign In</title>
 </head>
@@ -15,7 +15,7 @@
 
     <div class="parent">
         <div class="container">
-            <img src="../assets/elements/examoLogo.svg" alt="logo" id="logo">
+            <img src="./assets/elements/examoLogo.svg" alt="logo" id="logo">
             <input type="text" placeholder="Email" name="email" id="email">
             <p>Message1</p>
             <input type="password" placeholder="Password" name="pass" id="pass">
@@ -67,7 +67,7 @@
             d="M136 180c32,-9 45,13 46,29 3,27 8,29 0,42 -14,25 -52,24 -79,0 -21,-18 -2,-61 33,-71z" />
     </svg>
 
-    <script src="../scripts/signIn/signIn.js"></script>
+    <script src="./scripts/signIn/signIn.js"></script>
 
 </body>
 
