--- a/examination.html
+++ b/examination.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/navBar&Footer.css">
-    <link rel="stylesheet" href="../styles/exam.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/navBar&Footer.css">
+    <link rel="stylesheet" href="./styles/exam.css">
 
     <title>Examo</title>
 </head>
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <img src="../assets/elements/examoLogo.svg" alt="logo" id="logo">
+        <img src="./assets/elements/examoLogo.svg" alt="logo" id="logo">
     </nav>
 
     <div class="container">
@@ -29,7 +29,7 @@
                     <p id="question"></p>
                 </div>
 
-                <img src="../assets/elements/dec-1.svg" alt="decoration">
+                <img src="./assets/elements/dec-1.svg" alt="decoration">
             </section>
 
             <ul id="answersSection">
@@ -70,9 +70,9 @@
 
     <script src="https://kit.fontawesome.com/d245c084da.js" crossorigin="anonymous"></script>
 
-    <script src="../scripts/exam/globalVariables.js"></script>
-    <script src="../scripts/exam/examFunctions.js"></script>
-    <script src="../scripts/exam/main.js"></script>
+    <script src="./scripts/exam/globalVariables.js"></script>
+    <script src="./scripts/exam/examFunctions.js"></script>
+    <script src="./scripts/exam/main.js"></script>
 
 </body>
 
