--- a/timeOut.html
+++ b/timeOut.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/navBar&Footer.css">
-    <link rel="stylesheet" href="../styles/timeOut.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/navBar&Footer.css">
+    <link rel="stylesheet" href="./styles/timeOut.css">
 
     <title>TimeOut</title>
 </head>
@@ -15,13 +15,13 @@
 <body>
 
     <nav>
-        <img src="../assets/elements/examoLogo.svg" alt="logo" id="logo">
+        <img src="./assets/elements/examoLogo.svg" alt="logo" id="logo">
     </nav>
 
     <div class="container">
         <p>TimeOut</p>
 
-        <img src="../assets/elements/clock.svg" alt="clock" id="clock">
+        <img src="./assets/elements/clock.svg" alt="clock" id="clock">
     </div>
 
     <footer>
