update: change file path

--- a/signIn.html
+++ b/signIn.html
@@ -21,7 +21,7 @@
             <input type="password" placeholder="Password" name="pass" id="pass">
             <p>Message2</p>
 
-            <button id="btn" type="submit">Login</button>
+            <button id="btn">Login</button>
 
             <p id="signInMsg">Don't have an account? <span id="signInBtn">SIGNUP</span></p>
         </div>
