--- a/examination.html
+++ b/examination.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles/navBar&Footer.css">
     <link rel="stylesheet" href="./styles/exam.css">
 
+    <link rel="icon" href="./assets/imgs/logo.png">
+
     <title>Examo</title>
 </head>
 
