--- a/signIn.html
+++ b/signIn.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/signIn.css">
 
+    <link rel="icon" href="./assets/imgs/logo.png">
+
     <title>Sign In</title>
 </head>
 
