--- a/result.html
+++ b/result.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles/navBar&Footer.css">
     <link rel="stylesheet" href="./styles/result.css">
 
+    <link rel="icon" href="./assets/imgs/logo.png">
+
     <title>Results</title>
 </head>
 
