--- a/timeOut.html
+++ b/timeOut.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles/navBar&Footer.css">
     <link rel="stylesheet" href="./styles/timeOut.css">
 
+    <link rel="icon" href="./assets/imgs/logo.png">
+
     <title>TimeOut</title>
 </head>
 
